<?php

namespace App\Models;

/**
 * Class InterfaceHitung
 *
 * Kelas dasar yang mendefinisikan kontrak perhitungan
 * luas dan keliling untuk semua bangun datar.
 *
 * @package App\Models
 */
class InterfaceHitung
{
    /**
     * Menghitung luas bangun datar.
     *
     * @return float|int Nilai luas bangun datar
     */
    public function hitungLuas()
    {
        // Implementasi perhitungan luas
    }

    /**
     * Menghitung keliling bangun datar.
     *
     * @return float|int Nilai keliling bangun datar
     */
    public function hitungKeliling()
    {
        // Implementasi perhitungan keliling
    }
}
